--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,3 +34,57 @@ es:
       signup:     "Registrarse"
       add_book:   "Agregar un libro"
       logged_as:  "Conectado como %{name}"
+
+  books:
+    show:
+      edit:           "Editar"
+      link_to_book:   "Enlace al libro"
+      related_books:  "Libros relacionados"
+
+    form:
+      title:          "Título"
+      author:         "Autor"
+      document:       "Documento"
+      publish_year:   "Año de Publicación"
+      tag_list:       "Lista de Etiquetas"
+      tags_hint:      "Separe las etiquetas con comas"
+      description:    "Descripción"
+      cover:          "Tapa"
+      submit:         "Enviar"
+
+    new:
+      new_book:       "Nuevo libro"
+
+    edit:
+      edit_book:      "Editar libro"
+
+    tags:
+      books_tagged_with:  "Libros etiquetados con %{tag}"
+
+  sessions:
+    new:
+      log_in:         "Ingresar"
+      password:       "Contraseña"
+      login:          "Ingresar"
+      forgot_pass:    "Olvidó la contraseña?"
+
+  password_resets:
+    show:
+      update_password:  "Actualizar contraseña"
+      password:         "Contraseña"
+      password_confirmation:  "Confirmación de contraseña"
+      submit:           "Enviar"
+
+    new:
+      reset_your_password:  "Reinicie su contraseña"
+      message:              "Al ingresar su cuenta de email, le será enviado un enlace para reiniciar su contraseña"
+      your_email:           "Su email"
+      reset_password:       "Reiniciar contraseña"
+
+
+  activerecord:
+    models:
+      user:           "Usuario"
+      book:           
+        one:          "libro"
+        other:        "libros"
