--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,11 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  logged_in: "You are now logged in."
+  email_or_pass_invalid: "Email or password is invalid"
+  logged_out: "You are now logged out."
+  thank_you:  "Thank you for signing up!"
+
   views:
     pagination:
       first: "&laquo;"
@@ -32,8 +36,10 @@ en:
       logout:     "Logout"
       login:      "Login"
       signup:     "Sign Up"
-      addbook:    "Add a book"
+      add_book:    "Add a book"
+      add_video:   "Add a video"
       logged_as:  "Logged in as %{name}"
+      settings:   "Settings"
 
   books:
     show:
@@ -58,8 +64,36 @@ en:
     edit:
       edit_book:      "Edit books"
 
+    edit_tags_form:
+      tags_hint:      "Separate tags with commas."
+      update_tags:    "Update tag list"
+
     tags:
       books_tagged_with:  "Books tagged with %{tag}"
+
+  users:
+    settings:
+      settings:       "Settings"
+
+    new:
+      title:          "Sign up as a new user"
+      name:           "Name"
+      password:       "Password"
+      password_confirmation: "Password confirmation"
+      language:       "Language"
+      submit:         "Submit"
+
+  videos:
+    form:
+      title:          "Title"
+      creator:        "Creator"
+      description:    "Description"
+      tag_list:       "Tag list"
+      tags_hint:      "Separate tags with commas."
+
+    new:
+      new_video:      "New video"
+      back:           "Back"
 
   sessions:
     new:
