--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -1,7 +1,7 @@
 en:
   simple_form:            
     labels:
-      book:
+      defaults:
         title:              "Title"
         creator:            "Creator"
         url:                "Url"
