Fixed some translation bugs in preferences modal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -89,6 +89,7 @@ en:
   users:
     settings:
       settings:       "Settings"
+      email_sign_up:  "Sign up for an email when a book tagged with one of your favorite tags gets added"
 
     new:
       title:          "Sign up as a new user"
